docs added and comments added